[package]
name = "nebula"
version = "0.0.0"
description = "Nebula Markdown Notes"
authors = ["Radha", "Krsna"]
license = "MIT"
repository = "https://github.com/Radhe743/NebulaApp"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-maximize", "window-unmaximize", "window-start-dragging", "window-minimize", "window-hide", "window-close", "window-show", "window-unminimize", "protocol-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
dirs = "5.0.1"
uuid = "1.4.1"
chrono = "0.4.26"
mime_guess = "2.0.4"
window-shadows = "0.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
